# QtToDo

./: CMakeLists.txt  README.md  Task.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskwidget.cpp  taskwidget.h  taskwidget.ui
src/: Resourses.h  Task.h  files.qrc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourses.h
src/TaskWidget/: taskwidget.cpp  taskwidget.h  taskwidget.ui
widgets/: taskwidget.ui
